--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,16 +78,13 @@ jobs:
             echo "TARGET_PROJECT_INPUT=${{ needs.convert_project_names.outputs.TARGET_PROJECT_INPUT }}" >> $GITHUB_ENV
             echo "SOURCE_SECRET_NAME=${{ needs.convert_project_names.outputs.SOURCE_SECRET_NAME }}" >> $GITHUB_ENV
             echo "TARGET_SECRET_NAME=${{ needs.convert_project_names.outputs.TARGET_SECRET_NAME }}" >> $GITHUB_ENV
-            echo "INside the second job"
-            echo $SOURCE_PROJECT_INPUT
-            echo ${{env.SOURCE_SECRET_NAME}}
-
         
         - name: Retrieve and use Secret Key
           run: |
             # Access the secrets using environment variables
-            SOURCE_PROJECT=env.SOURCE_PROJECT_INPUT
+            SOURCE_PROJECT=${{env.SOURCE_PROJECT_INPUT}}
             TARGET_PROJECT=${{env.TARGET_PROJECT_INPUT}}
             SOURCE_SECRET=${{ secrets[env.SOURCE_SECRET_NAME] }}
             TARGET_SECRET=${{ secrets[env.TARGET_SECRET_NAME] }}
+            echo $SOURCE_PROJECT $SOURCE_SECRET $TARGET_PROJECT $TARGET_SECRET
             python -u main.py $SOURCE_PROJECT $SOURCE_SECRET $TARGET_PROJECT $TARGET_SECRET
